--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,12 @@ h2 {
 
 a {
   text-decoration: none;
+}
+
+/* Product homescreen page */
+.product-name {
   color: blue !important;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 /* carousel */
